k8s/expressed-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expressed-deployment
  labels:
    app: expressed
spec: #specification for the deployment
  replicas: 1
  selector:
    matchLabels:
      app: expressed
  template:
    metadata:
      labels:
        app: expressed
    spec: #specification for the pod
      containers:
      - name: expressed
        image: aaugusto11/expressed:amd64
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /express/healthz
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /express/healthz
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1  
---
apiVersion: v1
kind: Service
metadata:
  name: expressed-service
spec:
  selector:
    app: expressed
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
