k8s/vuecalc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vuecalc-deployment
  labels:
    app: vuecalc
spec: #specification for the deployment
  replicas: 1
  selector:
    matchLabels:
      app: vuecalc
  template:
    metadata:
      labels:
        app: vuecalc
    spec: #specification for the pod
      containers:
      - name: vuecalc
        image: aaugusto11/vuecalc:amd64
        imagePullPolicy: Always
        ports:
        - containerPort: 2000
---
apiVersion: v1
kind: Service
metadata:
  name: vuecalc-service
spec:
  selector:
    app: vuecalc
  ports:
  - port: 2000
    targetPort: 2000
    protocol: TCP
