k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vuecalc-service
            port:
              number: 2000
      - path: /express
        pathType: Prefix
        backend:
          service:
            name: expressed-service
            port:
              number: 3000
      - path: /happy/
        pathType: Prefix
        backend:
          service:
            name: happy-service
            port:
              number: 4000
